verifing send messages and location sharing features

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
 </head>
 <body>
     <h1>Chat app </h1>
-    <button id="incriment">+1</button>
+    <form id="message-form">
+        <input type="text" name="message" placeholder="message">
+        <button>Submit</button>
+    </form>
+    <button id="location">Send location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/chat.js"></script>
 </body>
